--- a/Nasa-Project/server/package.json
+++ b/Nasa-Project/server/package.json
@@ -5,7 +5,9 @@
   "main": "server.js",
   "scripts": {
     "watch": "nodemon src/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test-watch": "jest --watch",
+    "test-coverage": "jest --coverage",
     "start": "node src/server.js"
   },
   "keywords": [],
@@ -18,6 +20,8 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.1",
+    "supertest": "^6.3.3"
   }
 }
