--- a/Nasa-Project/server/package.json
+++ b/Nasa-Project/server/package.json
@@ -8,7 +8,8 @@
     "test": "jest",
     "test-watch": "jest --watch",
     "test-coverage": "jest --coverage",
-    "start": "node src/server.js"
+    "start": "node src/server.js",
+    "cluster": "pm2 start src/server.js -i max"
   },
   "keywords": [],
   "author": "",
@@ -17,7 +18,8 @@
     "cors": "^2.8.5",
     "csv-parse": "^5.5.0",
     "express": "^4.18.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "pm2": "^5.3.0"
   },
   "devDependencies": {
     "jest": "^29.7.0",
